# clix

./: .env.example  .gitignore  Cargo.toml  LICENSE.zh-cn.md  PRIVACY.md  PRIVACY.zh-cn.md  README.md  README.zh-cn.md  build.rs
.githooks/: pre-commit
.github/workflows/: build.yml
launcher/: Cargo.toml  README.md
launcher/src/: main.rs
packaging/msix/: Package.appxmanifest.template  README.md  build-msix.ps1
src/: achievements.rs  analytics.rs  animation.rs  app.rs  artwork.rs  cache.rs  config.rs  cover.rs  dlss.rs  epic.rs  game.rs  game_home_visibility.rs  game_icons.rs  game_last_played.rs  home_menu_structure.rs  i18n.rs  input.rs  launch.rs  main.rs  page_state.rs  power_menu_structure.rs  runtime_state.rs  settings.rs  startup.rs  steam.rs  ui.rs  xbox_home.rs
src/animation/: easing.rs  mod.rs  transition.rs
src/app/: achievements.rs  artwork.rs  dlss_state.rs  external_app_icons.rs  flow_of_focus.rs  flow_of_input.rs  flow_of_launch.rs  flow_of_render.rs  flow_of_settings.rs  game_icons.rs  install_size.rs  mod.rs  playtime.rs  runtime_helpers.rs  steam_update.rs  ui_assets.rs  view_helpers.rs
src/app/achievements/: animation.rs  icons.rs  loading.rs  mod.rs  query.rs  store.rs
src/app/state/: game_menu.rs  mod.rs  page_state.rs  power.rs  runtime_state.rs
src/assets/: cache.rs  cover.rs  dlss.rs  mod.rs
src/game_platforms/: epic.rs  mod.rs  xbox.rs
src/game_scan/: epic.rs  mod.rs  steam.rs  xbox.rs
src/input/: buttons.rs  dualsense.rs  mod.rs  xbox_home.rs  xinput.rs
src/launch/: windows.rs
src/launch/windows/: focus.rs  (+2 more)
src/power_menu/: mod.rs  system.rs  ui.rs
src/steam/: achievement_bvdf.rs  achievement_cache.rs  achievement_schema.rs  achievements.rs  library.rs  mod.rs  types.rs
src/system/: app_identity.rs  display_mode.rs  external_apps.rs  mod.rs  overlay.rs  power.rs  startup.rs
src/ui/: achievement_page.rs  anim.rs  assets.rs  background.rs  game_library.rs  game_list.rs  game_menu.rs  header.rs  hint_bar.rs  hint_icons.rs  home_menu.rs  mod.rs  power.rs  power_menu.rs  settings_page.rs  text.rs
