[package]
name = "clix"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
eframe = "0.23"
gilrs = "0.9"
walkdir = "2.3"
dirs = "4.0"
regex = "1"
winreg = { version = "0.9", optional = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
ureq = "2"
chrono = { version = "0.4", default-features = true, features = ["clock"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi", "shellapi", "xinput", "psapi", "processthreadsapi", "handleapi", "winver"] }
libloading = "0.7"
