[package]
name = "big-screen-launcher"
version = "1.1.1"
edition = "2021"
license = "GPL-3.0-only"
autobins = false
default-run = "big-screen-launcher"

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["accesskit", "default_fonts", "glow", "wayland", "web_screen_reader", "x11"] }
walkdir = "2.3"
dirs = "4.0"
regex = "1"
winreg = { version = "0.9", optional = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
ureq = "3"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
sys-locale = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi", "shellapi", "xinput", "psapi", "processthreadsapi", "handleapi", "winver", "libloaderapi"] }
libloading = "0.7"
crc32fast = "1"
raw-window-handle = "0.6"
hidapi = "2"
pollster = "0.4"
windows = { version = "0.61", features = ["ApplicationModel", "Foundation"] }

[build-dependencies]
chrono = { version = "0.4", default-features = true, features = ["clock"] }
ico = "0.5"
image = { version = "0.24", default-features = false, features = ["png"] }
resvg = "0.47"
winres = "0.1"

[[bin]]
name = "big-screen-launcher"
path = "src/main.rs"
